trunk/Archive2/52/3e213da0546aa0/main.cpp
namespace
{
    void func();
}

void func()
{

}

int main()
{
	func();
}